fix dark mode box shadow

--- a/playbook/app/pb_kits/playbook/pb_advanced_table/_advanced_table.scss
+++ b/playbook/app/pb_kits/playbook/pb_advanced_table/_advanced_table.scss
@@ -195,7 +195,7 @@
         [class*="pinned-left"] {
           background: $bg_dark_card;
           border-right: $border_dark;
-          box-shadow: $shadow_dark !important;
+          box-shadow: $shadow_deep !important;
           position: sticky !important;
         }
         .bg-silver td:first-child {
